Fixed bug #42020. When an outer join is executed using a join buffer the buffer is scanned twice. At the first scan matches for records in the buffer are looked for and any record for which a match is found is marked. At the second scan the records without matches are looked through and each of them is complemented by null columns after having been read into the record buffer. Records with matches are just skipped and not even read into the join buffer. As a result at the end of the scan the record in the record buffer is not guaranteed to be the last record from join buffer. This can break the whole nested loop process and lead to wrong results produced by the operation. All fields of the last record from the join buffer must be restored in the corresponding record buffers after the second scan. Original revid:igor@mysql.com-20090111220601-tgrkb7xn5qvvhxaz